kustomize/overlays/prod/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: service # {"$kpt-set":"name"}
spec:
  hosts:
  - service.acme.io
